force-app/main/default/objects/Account/fields/LLC_BI__Region__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Region__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to segment Relationships or Accounts. The value provided must match one of the values in the Region list established for this organization.</description>
    <inlineHelpText>Custom field to segment Accounts by Region</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>