force-app/main/default/objects/Account/fields/LLC_BI__Relationship_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Number__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is used specifically for mass emails to customers so we can easily create isolated risks (for example, email relationships 0 - 100).</description>
    <label>Relationship Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>