force-app/main/default/objects/Account/fields/LLC_BI__Revenue_Growth__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Revenue_Growth__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to display the most recent year-over-year revenue growth as a percent.</description>
    <inlineHelpText>Expressed as a percent</inlineHelpText>
    <label>Revenue Growth %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>