force-app/main/default/objects/Account/fields/LLC_BI__Review_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Review_Frequency__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This indicates how often the product package review is required.</description>
    <label>Review Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Every 2 Months</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>