force-app/main/default/objects/Account/fields/LLC_BI__Review_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Review_Status__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It designates the status of the Account Review.</description>
    <inlineHelpText>Status of the Account Review</inlineHelpText>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>