force-app/main/default/objects/Account/fields/LLC_BI__Risk_Rating_Review_Date_Decisioned__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Rating_Review_Date_Decisioned__c</fullName>
    <description>The latest decision date from the related Risk Rating Reviews</description>
    <label>Risk Rating Review Date Decisioned</label>
    <type>Date</type>
</CustomField>