force-app/main/default/objects/Account/fields/LLC_BI__Risk_Rating_Review_Grade__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Rating_Review_Grade__c</fullName>
    <description>The system autopopulates this optional field to indicate the latest risk rating review grade. By default, it is blank.</description>
    <label>Risk Rating Review Grade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>