force-app/main/default/objects/Account/fields/LLC_BI__Risk_Rating_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Rating_Review_Status__c</fullName>
    <description>This field is optional. It is automatically populated with the approval or rejection status of the latest decisioned related risk rating review.</description>
    <label>Risk Rating Review Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>