force-app/main/default/objects/Account/fields/LLC_BI__SLA__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SLA__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to select SLA level for this Relationship or Account, for example, Gold, Silver, or Bronze. The value provided must match one of the values in the SLA list established for this organization.</description>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>