force-app/main/default/objects/Account/fields/LLC_BI__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SLAExpirationDate__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the expiration date for the SLA.</description>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>