force-app/main/default/objects/Account/fields/LLC_BI__SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SLASerialNumber__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the Serial number for the SLA.</description>
    <label>SLA Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>