force-app/main/default/objects/Account/fields/LLC_BI__Statement_To_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Statement_To_Date__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used with Automated Financials System. It designates the ending of the date range the BOT will request from the Relationship being serviced.</description>
    <inlineHelpText>The end of the date range in which the BOT will request from the relationship being serviced</inlineHelpText>
    <label>Statement To Date</label>
    <type>Date</type>
</CustomField>