force-app/main/default/objects/Account/fields/LLC_BI__Tax_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tax_Identification_Number__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the Tax ID number for the account and is generally used with Business relationships. The field should not be used if Platform Encryption is enabled.</description>
    <label>Tax Identification Number</label>
    <length>80</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>