force-app/main/default/objects/Account/fields/LLC_BI__Tax_Identification_Number_PE__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tax_Identification_Number_PE__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the Tax ID number for the account and is generally used with Business relationships. The field is only used when Platform Encryption is enabled.</description>
    <label>Tax Identification Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>