force-app/main/default/objects/Account/fields/LLC_BI__Total_Direct_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Direct_Exposure__c</fullName>
    <description>This field is optional. It is automatically populated with a value based on
            the configuration of Relationship Statistics. This field is used to report Total Direct Exposure to this Relationship.</description>
    <label>Total Direct Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>