force-app/main/default/objects/Account/fields/LLC_BI__Total_Net_New_Funds__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Net_New_Funds__c</fullName>
    <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Total Net New Funds to this Relationship.</description>
    <inlineHelpText>Total Net New Funds</inlineHelpText>
    <label>Total Net New Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>