force-app/main/default/objects/Account/fields/LLC_BI__Trust_Established_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Trust_Established_Date__c</fullName>
    <description>Trust Established Date</description>
    <inlineHelpText>The established date of the trust.</inlineHelpText>
    <label>Trust Established Date</label>
    <type>DateTime</type>
</CustomField>