force-app/main/default/objects/Account/fields/LLC_BI__Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Trust_Type__c</fullName>
    <description>Trust Type</description>
    <inlineHelpText>Select the trust type based on whether the trust grantor (creator) is the same or different from the trustee or if the grantor is deceased.</inlineHelpText>
    <label>Trust Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declaration of trust (grantor and trustee same)</fullName>
            </value>
            <value>
                <fullName>Trust under agreement (grantor and trustee different)</fullName>
            </value>
            <value>
                <fullName>Testamentary trust (under will of deceased grantor)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>