force-app/main/default/objects/Account/fields/WKDDP__Backup_Withholding_Number_Applied_For__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Backup_Withholding_Number_Applied_For__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users mark this optional boolean field true when holder&apos;s application for the tax identification number (TIN) exists. By default, it is false.</description>
    <inlineHelpText>Select this field if the holder&apos;s application for the tax identification number (TIN) exists.</inlineHelpText>
    <label>Backup Withholding TIN Applied For</label>
    <type>Checkbox</type>
</CustomField>