force-app/main/default/objects/Account/fields/WKDDP__Beneficial_Owners_Not_Applicable_Type__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Beneficial_Owners_Not_Applicable_Type__c</fullName>
    <description>Administrators populate this optional picklist to show the reason that the otherwise required Beneficial Owner Certification for Legal Entities is not needed and should be de-selected for the given transaction.</description>
    <inlineHelpText>Select the reason that the Beneficial Owner Certification for Legal Entities is not needed and should be de-selected for the given transaction.</inlineHelpText>
    <label>Beneficial Owners Not Applicable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collected Elsewhere (earlier in transaction or acceptable alternate form/record)</fullName>
            </value>
            <value>
                <fullName>Not a &apos;Legal Entity&apos; subject to the certification requirement</fullName>
            </value>
            <value>
                <fullName>Financial Institution with Federal Regulator</fullName>
            </value>
            <value>
                <fullName>Bank with State Bank Regulator</fullName>
            </value>
            <value>
                <fullName>Government Entity (Phase I Exemption)</fullName>
            </value>
            <value>
                <fullName>Publicly-Traded Company (Phase I Exemption)</fullName>
            </value>
            <value>
                <fullName>Subsidiary of Publicly-Traded Co. (Phase I Exemption)</fullName>
            </value>
            <value>
                <fullName>Exempt Entity registered with the SEC</fullName>
            </value>
            <value>
                <fullName>Exempt Entity registered with the CFTC</fullName>
            </value>
            <value>
                <fullName>Public Accounting Firm registered under Sarbanes-Oxley Act</fullName>
            </value>
            <value>
                <fullName>Bank or Savings and Loan Holding Co.</fullName>
            </value>
            <value>
                <fullName>Pooled Investment Vehicle operated/advised by financial institution</fullName>
            </value>
            <value>
                <fullName>Insurance Company regulated by a State</fullName>
            </value>
            <value>
                <fullName>Financial Market Utility designated by the Financial Stability Oversight Council</fullName>
            </value>
            <value>
                <fullName>Foreign Financial Institution with regulator having beneficial ownership information</fullName>
            </value>
            <value>
                <fullName>Non-U.S. Governmental Department, Agency or Political Subdivision</fullName>
            </value>
            <value>
                <fullName>Other Legal Entity opening &apos;Private Banking Account&apos; (31 CFR  1010.620)</fullName>
            </value>
            <value>
                <fullName>Other Legal Entity account participating in an Employee Benefit Plan (ERISA)</fullName>
            </value>
            <value>
                <fullName>Exempt Account, POS for limited credit purchases of retail goods/services</fullName>
            </value>
            <value>
                <fullName>Exempt Account, finance postage purchases direct payment by FI to provider</fullName>
            </value>
            <value>
                <fullName>Exempt Account, finance insurance premiums direct payment by FI to provider</fullName>
            </value>
            <value>
                <fullName>Exempt Account, finance purchase/lease of equipment direct payment by FI to vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>