force-app/main/default/objects/Account/fields/WKDDP__Birth_Country__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Birth_Country__c</fullName>
    <description>Users enter the birth country of the account holder in this optional field.</description>
    <inlineHelpText>Enter the birth country of the account holder.</inlineHelpText>
    <label>Birth Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>