force-app/main/default/objects/Account/fields/WKDDP__Date_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Date_of_Establishment__c</fullName>
    <description>Administrators populate the date on which the account holder was established. This is applicable when the account holder is an entity.</description>
    <inlineHelpText>Enter the date on which the account holder was established, when the account holder is an entity.</inlineHelpText>
    <label>Date of Establishment</label>
    <type>Date</type>
</CustomField>